--- a/literature.bib
+++ b/literature.bib
@@ -380,6 +380,47 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url       = {https://doi.org/10.1109/DESEC.2018.8625149},
 }
 
+@Article{Marlinspike2016,
+  author  = {Marlinspike, Moxie and Perrin, Trevor},
+  journal = {Open Whisper Systems},
+  title   = {The {X3DH} key agreement protocol},
+  year    = {2016},
+  volume  = {283},
+  groups  = {Solutions},
+  url     = {https://signal.org/docs/specifications/x3dh/x3dh.pdf},
+}
+
+@Article{Perrin2016,
+  author  = {Perrin, Trevor and Marlinspike, Moxie},
+  journal = {GitHub wiki},
+  title   = {The double ratchet algorithm},
+  year    = {2016},
+  groups  = {Solutions},
+  url     = {https://signal.org/docs/specifications/doubleratchet/doubleratchet.pdf},
+}
+
+ 
+@Misc{Marlinspike2014,
+  author  = {Marlinspike, Moxie},
+  month   = {May},
+  title   = {Private Group Messaging},
+  year    = {2014},
+  groups  = {Solutions},
+  journal = {Signal},
+  url     = {https://signal.org/blog/private-groups/},
+}
+
+@Article{Blum2020,
+  author  = {Blum, Josh and Booth, Simon and Gal, Oded and Krohn, Maxwell and Len, J and Lyons, K and Marcedone, A and Maxim, M and Mou, ME and O’Connor, J and others},
+  journal = {Zoom Video Commun., Inc., San Jose, CA, Tech. Rep. Version},
+  title   = {E2E encryption for zoom meetings},
+  year    = {2020},
+  number  = {1},
+  volume  = {2},
+  groups  = {Solutions},
+  url     = {https://github.com/zoom/zoom-e2e-whitepaper},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
