--- a/txt/3-requirements.tex
+++ b/txt/3-requirements.tex
@@ -250,6 +250,7 @@ This allows to run cryptographic operations outside of JavaScript and enables se
 This API, however, is limited to specific primitives. 
 Advanced encryption schemes developed within recent years are not yet defined and available in the API.
 To ensure portability of the inverse transparency toolchain, the implementation of this thesis should thus only rely on primitives defined by the Web Cryptographic API.
+This is specifically important because the Clotilde frontend is a web application.
 
 \subsubsection{N3. Usability}
 Usually a trade-off between Security and Usability needs to be resolved during system design~\todo{quelle}.
