--- a/txt/4-overview-solutions.tex
+++ b/txt/4-overview-solutions.tex
@@ -27,8 +27,8 @@ Details and justifications can be found in the corresponding sections below.
     \ref{sec:key-server}            & Key server                & \checkmark  & \checkmark  & \checkmark    &               & \checkmark    & \checkmark    &               & \checkmark    & \checkmark    & \checkmark    \\ \hline
     \ref{sec:attribute-encryption}  & ABE                       & \checkmark  & \checkmark  & \checkmark    &               & \checkmark    & \checkmark    &               &               & \checkmark    & \checkmark    \\ \hline
     \ref{sec:broadcast-identity}    & IBBE                      & \checkmark  & \checkmark  & \checkmark    &               & \checkmark    & \checkmark    &               &               & \checkmark    & \checkmark    \\ \hline
-    \ref{sec:broadcast-identity}    & Certificate-based         & \checkmark  & \checkmark  & \checkmark    & \checkmark    & \checkmark    & \checkmark    & \checkmark    &               & \checkmark    & \checkmark    \\ \hline
-    \ref{sec:broadcast-proxy}       & Proxy re-encryption       & \checkmark  & \checkmark  & \checkmark    &               & \checkmark    & \checkmark    &               &               & \checkmark    & \checkmark    \\ \hline
+    \ref{sec:broadcast-identity}    & CBBE                      & \checkmark  & \checkmark  & \checkmark    & \checkmark    & \checkmark    & \checkmark    & \checkmark    &               & \checkmark    & \checkmark    \\ \hline
+    \ref{sec:broadcast-proxy}       & PRE                       & \checkmark  & \checkmark  & \checkmark    &               & \checkmark    & \checkmark    &               &               & \checkmark    & \checkmark    \\ \hline
 \end{tabular}
 \end{table}
 
