--- a/literature.bib
+++ b/literature.bib
@@ -421,6 +421,36 @@ Key finding: Revealing Metadata to attackers might compromise privacy (e.g. shar
   url     = {https://github.com/zoom/zoom-e2e-whitepaper},
 }
 
+@InProceedings{Dixit2018,
+  author    = {Dixit, Pooja and Gupta, Avadhesh Kumar and Trivedi, Munesh Chandra and Yadav, Virendra Kumar},
+  booktitle = {Networking Communication and Data Knowledge Engineering},
+  title     = {Traditional and Hybrid Encryption Techniques: A Survey},
+  year      = {2018},
+  address   = {Singapore},
+  editor    = {Perez, Gregorio Martinez and Mishra, Krishn K. and Tiwari, Shailesh and Trivedi, Munesh C.},
+  pages     = {239--248},
+  publisher = {Springer Singapore},
+  abstract  = {Information security is the process that protects its availability, privacy, and integrity. Access to stored information on computer databases has increased nowadays. Most companies store business and individual information in computer. Much of the information stored is highly confidential and not for knowing publicly. Data encryption is most traditional technique that secure highly confidential information by using some conventional algorithm, which already exist or prewritten. Most powerful part of encryption technique is key generation, which has two parts, one is symmetric key generation and another is asymmetric key generation. Nowadays hackers are easily capable to break the key with the help of modern high computing machines. Current need is strongly encrypted data which cannot be decrypt through cryptanalysis. Paper presented discusses some traditional as well as modern hybrid encryption techniques along with quantum approach such as RSA based on ECC with AVK, DES-RSA, RSA-based singular cubic curve, JCE, 3D chaotic map technique, Blowfish.},
+  groups    = {Requirements},
+  isbn      = {978-981-10-4600-1},
+  url       = {https://link.springer.com/content/pdf/10.1007/978-981-10-4600-1.pdf},
+}
+
+@Misc{Barnes2014,
+  author       = {Richard Barnes},
+  howpublished = {RFC 7165},
+  month        = apr,
+  title        = {{Use Cases and Requirements for JSON Object Signing and Encryption (JOSE)}},
+  year         = {2014},
+  abstract     = {Many Internet applications have a need for object-based security mechanisms in addition to security mechanisms at the network layer or transport layer. For many years, the Cryptographic Message Syntax (CMS) has provided a binary secure object format based on ASN.1. Over time, binary object encodings such as ASN.1 have become less common than text-based encodings, such as the JavaScript Object Notation (JSON). This document defines a set of use cases and requirements for a secure object format encoded using JSON, drawn from a variety of application security mechanisms currently in development.},
+  doi          = {10.17487/RFC7165},
+  number       = {7165},
+  pagetotal    = {25},
+  publisher    = {RFC Editor},
+  series       = {Request for Comments},
+  url          = {https://www.rfc-editor.org/info/rfc7165},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
