--- a/txt/3-requirements.tex
+++ b/txt/3-requirements.tex
@@ -5,7 +5,7 @@
 
 
 \chapter{Requirements}
-\label{requirements}
+\label{chap:requirements}
 
 This chapter identifies the requirements of the software which needs to be implemented in the context of this thesis.
 Overall, there are three major goals which need to be achieved. 
